@@ -1,9 +1,5 @@
 ; This file is generated from dist.ini.meta by dzil bakeini.
 ; Edit that file or the bundles contained within for long-term changes.
-; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 2.014001 at Tue Jun  3 11:07:39 2014
-; vim: syntax=dosini
-; Uncomment this to bootstrap via self
-; [Bootstrap::lib]
 name = Dist-Zilla-App-Command-bakeini
 author = Kent Fredric <kentnl@cpan.org>
 license = Perl_5
@@ -157,7 +153,6 @@ modules = Dist::Zilla::PluginBundle::Author::KENTNL
 modules = Dist::Zilla::App::Command::bakeini
 
 [Prereqs / @Author::KENTNL/::Role::BundleDeps]
-; auto_prereqs_skip = File::Find
 -phase = develop
 -relationship = requires
 Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.001001
