@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
-0.001005
+0.002000
+ [Changed / runtime requires]
+ - Dist::Zilla::Util::ExpandINI 0 → 0.003000
 
 0.001004 2014-10-30T23:29:28Z
  [Added / configure requires]
