@@ -1,6 +1,6 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
-0.001005
+0.002000
  [Changed / configure recommends]
  - ExtUtils::MakeMaker 7.00 → 7.02
 
@@ -9,6 +9,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
 
  [Changed / develop suggests]
  - Dist::Zilla::App::Command::bakeini 0.001003 → 0.001004
+
+ [Changed / runtime requires]
+ - Dist::Zilla::Util::ExpandINI 0 → 0.003000
 
  [Changed / test recommends]
  - ExtUtils::MakeMaker 7.00 → 7.02
