@@ -1,6 +1,6 @@
 This file contains changes to DEVELOPMENT dependencies only ( both REQUIRED and OPTIONAL )
 
-0.001005
+0.002000
  [Changed / develop recommends]
  - Test::More 1.001008 → 1.001009
 
