@@ -1,6 +1,6 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
-0.001005
+0.002000
  [Changed / configure recommends]
  - ExtUtils::MakeMaker 7.00 → 7.02
 
