@@ -5,7 +5,12 @@ Release history for Dist-Zilla-App-Command-bakeini
  - Dependencies changed since 0.001004, see misc/*.deps* for details
  - configure: (recommends: ↑1)
  - develop: (recommends: ↑1, suggests: ↑1)
+ - runtime: ↑1
  - test: (recommends: ↑2)
+
+ [Features]
+ - Now Supports --comments=all|authordeps|none ( default is all )
+ - Thanks to Alan Young (AYOUNG), #1 and #2
 
 0.001004 2014-10-30T23:29:28Z 6170f9a
  [Dependencies::Stats]
